@@ -1,5 +1,6 @@
 2008-01-17
 	* Fixed bug 1869454: Fails with Time ramining: -- (0 seconds).
+	* Fixed bug 1823864: Captcha on bid history.
 
 2007-11-22
 	* Fixed bug 1835531, segfault on bid history.
